package app.controllers;
import io.javalin.Javalin;

public class AdminController {

    // oprettet det på forhånd.

        public static void addRoutes(Javalin app) {
            //app.get("/admin", ctx -> ctx.render("admin-login.html"));
            //app.post("/admin/login", AdminController::handleLogin);
            //app.get("/admin/dashboard", AdminController::showDashboard);
            //app.get("/admin/order/:id", AdminController::showOrderDetails);
            //app.post("/admin/order/:id/send", AdminController::handleSendOffer);
        }

        // Tilføj metoder som handleLogin(), showDashboard(), osv. Men det ser vi på til den tid.
    }

