package app.mapper.material;

public class MaterialMapper {
}
