package app.mapper.material;

public class MaterialVariantMapper {
}
